homepage survey listing

--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -4,13 +4,20 @@
 
     <div class="row">
         <div class="col-sm-12 " style="background-color: #82D3EE; margin-top: -20px;  padding:10px;">
-            <div class="panel panel-default col-sm-4 pull-right" style="margin-top:15px;">
+            <div class="panel panel-default col-sm-4 pull-right" style="margin-top:0;margin-bottom:0;">
                 <div class="panel-body">
                     <strong>Join our mailing list!</strong>
 
                     <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on Watershed UGA. Please note if you are a
                         student,
                         a member of the community, or a faculty member in the email. </p>
+                    <strong>Take a Survey</strong>
+
+                    <p>We would like to find out what you know about the campus whatshed.
+                        <a href="{{ path('page_show', {id:13}) }}">
+                            Take our suvery now.
+                        </a>
+                    </p>
                 </div>
             </div>
             <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo" style="max-height: 160px;">
