--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -13,9 +13,9 @@
                         a member of the community, or a faculty member in the email. </p>
                     <strong>Take a Survey</strong>
 
-                    <p>We would like to find out what you know about the campus whatshed.
+                    <p>We would like to find out what you know about the campus watershed.
                         <a href="{{ path('page_show', {id:13}) }}">
-                            Take our suvery now.
+                            Take our survey now.
                         </a>
                     </p>
                 </div>
