--- a/src/Sustain/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/index.html.twig
@@ -23,7 +23,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.lastname }}, {{ entity.firstname }}</a></td>
+                <td><a href="{{ path('public_profile', { 'id': entity.id }) }}">{{ entity.lastname }}, {{ entity.firstname }}</a></td>
                 <td>{{ entity.college|raw }}</td>
                 <td> {{ entity.research|raw }}</td>
             </tr>
