--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -1,31 +1,49 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+
+
 {% block body -%}
 
 
     <h1>Stories</h1>
 
-    {% for entity in entities %}
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="inline">{{ entity.name|raw }}</h3>
-            </div>
-            {% for page in entity.pages %}
-                <div class="panel-body">
-                    <div class="col-sm-10">
-                        <h3 class="inline"><a href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName|raw }}</a></h3>
-                        {{ page.teaser|slice(0, 200)|raw }} . . .
-                    </div>
-                    <div class="col-sm-2">
-                        <img class="img-responsive pull-right" src="{{ page.teaserImage }}"/>
-                    </div>
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
+        {% for entity in entities %}
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                        {% if is_granted('ROLE_ADMIN') %}
+                        <a class="btn btn-default btn-sm pull-right" href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
+                        </a>
+                        {% endif %}
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+                            {{ entity.name|raw }}
+                        </a>
+                    </h4>
                 </div>
-            {% endfor %}
-        </div>
+                <div id="collapse{{ loop.index }}" class="panel-collapse collapse {% if loop.first %}in {% endif %}" role="tabpanel" aria-labelledby="heading{{ loop.index }}">
+                    <div class="panel-body">
+                        {% for page in entity.pages %}
+                            <div class="row">
+                                <div class="col-sm-10">
+                                    <h3 class="inline"><a href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName|raw }}</a></h3>
+                                    {{ page.teaser|slice(0, 200)|raw }} . . .
+                                </div>
+                                <div class="col-sm-2">
+                                    <img class="img-responsive pull-right" src="{{ page.teaserImage }}"/>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
 
-    {% endfor %}
+
+    </div>
+
 
 
 {% endblock %}
