--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -29,7 +29,7 @@
                             <div class="row">
                                 <div class="col-sm-10">
                                     <h3 class="inline"><a href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName|raw }}</a></h3>
-                                    {{ page.teaser|slice(0, 200)|raw }} . . .
+                                    {{ page.teaser|raw }}
                                 </div>
                                 <div class="col-sm-2">
                                     <img class="img-responsive pull-right" src="{{ page.teaserImage }}"/>
