link to sections on homepage

--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -36,7 +36,7 @@
         <div class="col-sm-8">
 
             <div class="col-sm-6">
-                <a style="padding-top: 20px;" href="{{ path('page_stories') }}">See All the Watershed Stories</a>
+                <a style="padding-top: 20px;" href="{{ path('section') }}">See All the Watershed Stories</a>
 
                 <h3>Watch our Introductory Video</h3>
 
