addition to home

--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -23,10 +23,9 @@
             <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo" style="max-height: 160px;">
 
         </div>
-        <div class="col-sm-12 " style="padding: 15px; background-color: white; border: solid 1px #e7e7e7 ">
-            <strong>What is Watershed UGA?</strong>
-            A town & gown initiative to involve UGA campus and Athens community in restoring our streams. We are transforming these streams into a living
-            laboratory through teaching, research, and service.
+        <div class="col-sm-12 " style="padding: 15px; background-color: #154d81; border: solid 1px #ecf0f1; color:#ecf0f1; text-align:center ">
+            <h2>Visit <a style="color: rgb(175, 241, 106);" href="https://dar.uga.edu/funder/campaigns/watershed-uga/" target='_blank'>https://dar.uga.edu/funder/campaigns/watershed-uga/</a>
+                and help us “daylight” campus streams!</h2>
         </div>
     </div>
 
