--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,6 +66,7 @@
                 <li id="skip">
                     <a id="main_nav" href="#main_content">Skip Navigation</a>
                 </li>
+                <li id="faq"><a href="{{ path('page_show', { 'id':1 }) }}">About</a></li>
                 <li id="faq"><a href="{{ path('page_show', { 'id':12 }) }}">FAQ</a></li>
                 <li id="event" class=""><a title="Events" href="{{ path('event') }}">Events/Service</a></li>
                 <li id="module"><a href="{{ path('module') }}">Modules</a></li>
