--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -85,13 +85,13 @@
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{{ path('user_profile') }}">My Profile</a></li>
                             <li>
-                                <a title="Logout" href="{{ path('fos_user_security_logout') }}">Logout</a>
+                                <a title="Logout" href="{{ path('logout') }}">Logout</a>
                             </li>
                         </ul>
                     </li>
                 {% else %}
                     <li>
-                        <a title="Login" href="{{ path('fos_user_security_login') }}">Login</a>
+                        <a title="Login" href="{{ path('user_profile') }}">Login</a>
                     </li>
                 {% endif %}
                 <li id="skip">
