--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -18,9 +18,20 @@
                         <a class="btn btn-default btn-sm pull-right" href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
                         </a>
                         {% endif %}
-                        <a title="click to open this section" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
-                            {{ entity.name|raw }}
-                        </a>
+                        <div class="row">
+                            <div class="col-sm-10">
+                                <h2 class="inline"><a title="click to open this section" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+                                        {{ entity.name|raw }}
+                                    </a></h2>
+                                <p> {{ entity.info|raw }}</p>
+                            </div>
+                            <div class="col-sm-2">
+                                <img class="img-responsive pull-right" src="{{ entity.image }}"/>
+                            </div>
+                        </div>
+
+
+
                     </h4>
                 </div>
                 <div id="collapse{{ loop.index }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ loop.index }}">
