--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -13,15 +13,21 @@
         {% for entity in entities %}
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
-                    <h4 class="panel-title">
-                        {% if is_granted('ROLE_ADMIN') %}
-                        <a class="btn btn-default btn-sm pull-right" href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
-                        </a>
-                        {% endif %}
-                        <a title="click to open this section" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
-                            {{ entity.name|raw }}
-                        </a>
-                    </h4>
+                    <div class="row">
+                        <div class="col-sm-10">
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <a class="btn btn-default btn-sm pull-right" href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
+                            </a>
+                            {% endif %}
+                            <h3 class="inline"><a title="click to open this section" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+                                    {{ entity.name|raw }}
+                                </a></h3>
+                            {{ entity.info|raw }}
+                        </div>
+                        <div class="col-sm-2">
+                            <img class="img-responsive pull-right" src="{{ entity.image }}"/>
+                        </div>
+                    </div>
                 </div>
                 <div id="collapse{{ loop.index }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ loop.index }}">
                     <div class="panel-body">
