--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,11 +67,8 @@
                     <a id="main_nav" href="#main_content">Skip Navigation</a>
                 </li>
                 <li id="faq"><a href="{{ path('page_show', { 'id':1 }) }}">About</a></li>
-                <li id="faq"><a href="{{ path('page_show', { 'id':12 }) }}">FAQ</a></li>
+                <li id="faq"><a href="{{ path('section') }}">Stories</a></li>
                 <li id="event" class=""><a title="Events" href="{{ path('event') }}">Events/Service</a></li>
-                <li id="module"><a href="{{ path('module') }}">Modules</a></li>
-                <li id="objective"><a href="{{ path('objective') }}">Objectives</a></li>
-                <li id="activity"><a href="{{ path('activity') }}">Activities</a></li>
                 <li id="file"><a title="Courses" href="{{ path('file') }}">Resources</a></li>
                 <li id="mapset"><a href="{{ path('mapset') }}">Maps</a></li>
                 <li id="user"><a href="{{ path('public_profiles') }}">Profiles</a></li>
