--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -30,7 +30,15 @@
         </ul>
     {% endif %}
 
-
+    {% if 'module' in app.request.attributes.get('_route') or 'objective' in app.request.attributes.get('_route') or 'activity' in app.request.attributes.get('_route')
+    or 'file' in app.request.attributes.get('_route') %}
+        <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
+            <li><a href="{{ path('module') }}">Modules</a></li>
+            <li><a href="{{ path('objective') }}">Objectives</a></li>
+            <li><a href="{{ path('activity') }}">Activities</a></li>
+            <li><a href="{{ path('file') }}">Files</a></li>
+        </ul>
+    {% endif %}
 
     {% if categories is defined %}
         <h2 style="font-size: medium">Labels</h2>
