--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -8,24 +8,15 @@
                 <div class="panel-body">
                     <strong>Join our mailing list!</strong>
 
-                    <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on Watershed UGA. Please note if you are a
+                    <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on
+                        Watershed UGA. Please note if you are a
                         student,
                         a member of the community, or a faculty member in the email. </p>
-                    <strong>Take a Survey</strong>
-
-                    <p>We would like to find out what you know about the campus watershed.
-                        <a href="{{ path('page_show', {id:13}) }}">
-                            Take our survey now.
-                        </a>
-                    </p>
                 </div>
             </div>
-            <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo" style="max-height: 160px;">
+            <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo"
+                 style="max-height: 160px;">
 
-        </div>
-        <div class="col-sm-12 " style="padding: 15px; background-color: #154d81; border: solid 1px #ecf0f1; color:#ecf0f1; text-align:center ">
-            <h2>Visit <a style="color: rgb(175, 241, 106);" href="https://dar.uga.edu/funder/campaigns/watershed-uga/" target='_blank'>https://dar.uga.edu/funder/campaigns/watershed-uga/</a>
-                and help us “daylight” campus streams!</h2>
         </div>
     </div>
 
@@ -40,7 +31,8 @@
                 <h3>Watch our Introductory Video</h3>
 
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mZvlSWSNsJw?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mZvlSWSNsJw?rel=0"
+                            frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -49,7 +41,8 @@
                 <div class="col-sm-6">
                     <h3>{{ page.teaserImageCaption }}</h3>
                     <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
-                        <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ page.menuName }}">
+                        <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                             alt="{{ page.menuName }}">
                     </a>
 
                     <div class="caption">
@@ -90,7 +83,8 @@
         </div>
 
         <div class="col-sm-4">
-            <a class="twitter-timeline" href="https://twitter.com/WatershedUGA" data-widget-id="644610687554162689">Tweets by @WatershedUGA</a>
+            <a class="twitter-timeline" href="https://twitter.com/WatershedUGA" data-widget-id="644610687554162689">Tweets
+                by @WatershedUGA</a>
             <script>!function (d, s, id) {
                     var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
                     if (!d.getElementById(id)) {
