--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,7 +69,7 @@
                 <li id="faq"><a href="{{ path('page_show', { 'id':1 }) }}">About</a></li>
                 <li id="faq"><a href="{{ path('section') }}">Stories</a></li>
                 <li id="event" class=""><a title="Events" href="{{ path('event') }}">Events/Service</a></li>
-                <li id="file"><a title="Courses" href="{{ path('file') }}">Resources</a></li>
+                <li id="file"><a title="Courses" href="{{ path('module') }}">Resources</a></li>
                 <li id="mapset"><a href="{{ path('mapset') }}">Maps</a></li>
                 <li id="user"><a href="{{ path('public_profiles') }}">Profiles</a></li>
                 <li id="user"><a href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
