--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -10,8 +10,7 @@
 
 
 {% block sidebar %}
-    {% if 'opportunity' in app.request.attributes.get('_route') or 'page' in app.request.attributes.get('_route')
-    or 'section' in app.request.attributes.get('_route') %}
+    {% if 'opportunity' in app.request.attributes.get('_route') or 'page' in app.request.attributes.get('_route') %}
         <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
             {% if 'page_show' in app.request.attributes.get('_route') %}
                 {% if entity.section %}{{ entity.section.name }}
