--- a/src/Sustain/AppBundle/Resources/views/Event/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/show.html.twig
@@ -37,7 +37,7 @@
 
         </div>
         {% if is_granted('ROLE_ADMIN') %}
-            <a class="btn btn-default" href="{{ path('event_edit', { 'id': entity.id }) }}">Edit</a>
+            <a class="btn btn-primary" href="{{ path('event_edit', { 'id': entity.id }) }}">Edit</a>
         {% endif %}
     </div>
 {% endblock %}
