--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -1,94 +1,33 @@
-.full  {
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-
 body {
     background: transparent;
-    font-family: 'Open Sans', 'Arial', 'sans-serif';
+    font-family: 'Raleway', 'Arial', 'sans-serif';
 }
 
-.navbar-brand, h1, h2, h3 {
-    font-family: 'Josefin Sans', 'Arial', 'sans-serif';
+h1, h2, h3 {
+    font-family: 'Raleway', 'Arial', 'sans-serif';
+    padding: 1rem;
 }
 
-
-.center {
-    margin: 0 auto;
+.container-fluid {
+    padding: 0;
 }
 
-.margin-top {
-    margin-top: 1%;
+.col-sm-10 {
+    padding: 2rem;
 }
 
-
-div.checkbox > label {
-    padding-left: 5px;
-    padding-right: 5px;
+.col-sm-12 {
+    padding: 3rem;
 }
 
-.checkbox input[type="checkbox"] {
-    position: inherit;
-    margin-left: 10px;
+.col-sm-4 {
+    padding: 2rem;
+    padding-top: 1rem;
 }
 
-div.radio > label {
-    padding-left: 5px;
-    padding-right: 5px;
+.col-sm-2 {
+    padding: 1rem;
 }
-
-.radio input[type="radio"] {
-    position: inherit;
-    margin-left: 10px;
-}
-
-.caption > h3 {
-    color:black
-}
-
-.caption > p {
-    color:black
-}
-
-h1 {
-    font-size: 28px;
-}
-
-h2 {
-    font-size: 22px;
-}
-
-.table {
-    background-color: #f8f8f8;
-}
-
-form {
-    padding: 10px;
-    background-color: #f8f8f8;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-}
-
-.fc-content {
-    cursor: pointer;
-}
-
-form div div  {
-    margin-bottom: 25px;
-}
-
-.table {
-    background-color: white;
-    border: 1px solid #dddddd;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-
 /**********  Accessibility **********/
 #skip a, #skip a:hover, #skip a:visited
 {
@@ -140,7 +79,6 @@ form div div  {
 .sidebar {
     background-color: #154d81;
     height: 95vh;
-    margin-top: -20px;
     color: #ecf0f1;
 }
 
@@ -187,8 +125,7 @@ form div div  {
     background-color: #154d81;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: #d8d1d1;
-    background-color: #2b78c0;
+    color: #00ee00;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     color: #d8d1d1;
@@ -224,5 +161,94 @@ form div div  {
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #d8d1d1;
         background-color: #2b78c0;
+    }
+}
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+    margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    background: rgba(0, 0, 0, .75);
+    z-index: 2;
+    padding: 2rem;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+    height: 32rem;
+    background-color: #777;
+}
+.carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem;
+}
+
+.carousel-indicators {
+    top: 1.5rem;
+    right: 1.5rem;
+    bottom: auto;
+    left: auto;
+    width: 1rem;
+    margin-left: 0;
+}
+
+.carousel-indicators > li {
+    margin-bottom: .25rem;
+}
+
+
+.carousel > .container {
+
+}
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+.marketing h2 {
+    font-weight: normal;
+}
+.marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+}
+
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 1.25rem;
+        font-size: 1.25rem;
+        line-height: 1.4;
+    }
+
+    .featurette-heading {
+        font-size: 50px;
+    }
+}
+
+@media (min-width: 62em) {
+    .featurette-heading {
+        margin-top: 7rem;
     }
 }
