--- a/src/Sustain/AppBundle/Resources/views/Category/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Category/index.html.twig
@@ -1,30 +1,31 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Category list</h1>
+    <div class="col-sm-10">
+        <h1>Category list</h1>
 
-    <table class="table">
-        <thead>
+        <table class="table">
+            <thead>
             <tr>
                 <th>Name</th>
                 <th>Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td>{{ entity.name }}</td>
-                <td>
+            </thead>
+            <tbody>
+            {% for entity in entities %}
+                <tr>
+                    <td>{{ entity.name }}</td>
+                    <td>
                         <a href="{{ path('category_edit', { 'id': entity.id }) }}">edit</a>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
 
-            <a class="btn btn-default" href="{{ path('category_new') }}">
-                Create a new entry
-            </a>
-
-    {% endblock %}
+        <a class="btn btn-primary" href="{{ path('category_new') }}">
+            Create a new entry
+        </a>
+    </div>
+{% endblock %}
