--- a/src/Sustain/AppBundle/Resources/views/Event/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/edit.html.twig
@@ -7,7 +7,7 @@
 
         {{ form(edit_form) }}
 
-        <a class="btn btn-default" href="{{ path('event') }}">
+        <a class="btn btn-primary" href="{{ path('event') }}">
             Back to the list
         </a>
 
