--- a/src/Sustain/AppBundle/Resources/views/Event/month.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/month.html.twig
@@ -56,7 +56,7 @@
     {% endif %}
 
     {# Calendar #}
-    <div class="col-sm-12 well">
+    <div class="col-sm-12">
 
 
         <div id='calendar'></div>
@@ -76,7 +76,7 @@
                     <p></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
