--- a/src/Sustain/AppBundle/Resources/views/Map/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Map/index.html.twig
@@ -1,40 +1,42 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Map list</h1>
-    <a href="{{ path('mapset_show', { 'id': entities[0].mapset.id }) }}" class="btn btn-primary pull-right">View Map</a>
-    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <a href="{{ path('map_new') }}" class="btn btn-primary pull-right">Add Pin</a>
-    {% endif %}
+    <div class="col-sm-10">
+        <h1>Map list</h1>
+        <a href="{{ path('mapset_show', { 'id': entities[0].mapset.id }) }}" class="btn btn-primary pull-right">View
+            Map</a>
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <a href="{{ path('map_new') }}" class="btn btn-primary pull-right">Add Pin</a>
+        {% endif %}
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Title</th>
-            <th>Lat</th>
-            <th>Lng</th>
-            <th>Description</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
+        <table class="table">
+            <thead>
             <tr>
-                <td><a href="{{ path('map_show', { 'id': entity.id }) }}">{{ entity.title }}</a></td>
-                <td>{{ entity.lat }}</td>
-                <td>{{ entity.lng }}</td>
-                <td>{{ entity.description|raw }}</td>
-                <td>
-                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                        {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
-                            <a class="btn btn-default" href="{{ path('map_edit', { 'id':
-                                entity.id }) }}">Edit</a>
-                        {% endif %}
-                    {% endif %}
-                </td>
+                <th>Title</th>
+                <th>Lat</th>
+                <th>Lng</th>
+                <th>Description</th>
+                <th>Actions</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+            </thead>
+            <tbody>
+            {% for entity in entities %}
+                <tr>
+                    <td><a href="{{ path('map_show', { 'id': entity.id }) }}">{{ entity.title }}</a></td>
+                    <td>{{ entity.lat }}</td>
+                    <td>{{ entity.lng }}</td>
+                    <td>{{ entity.description|raw }}</td>
+                    <td>
+                        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                            {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
+                                <a class="btn btn-primary" href="{{ path('map_edit', { 'id':
+                                    entity.id }) }}">Edit</a>
+                            {% endif %}
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
