--- a/src/Sustain/AppBundle/Resources/views/Objective/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/show.html.twig
@@ -6,14 +6,14 @@
 
 {% block body -%}
     <h1 style="display: inline-block;">Learning Objectives</h1>
-    <div class="col-sm-12 well">
+    <div class="col-sm-12">
 
         <h2>{{ entity.objective|raw }}</h2>
 
 
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
-                <a href="{{ path('objective_edit', { 'id': entity.id }) }}" class="btn btn-default pull-right">Edit</a>
+                <a href="{{ path('objective_edit', { 'id': entity.id }) }}" class="btn btn-primary pull-right">Edit</a>
             {% endif %}
         {% endif %}
         <p>{{ entity.description|raw }} </p>
@@ -27,8 +27,8 @@
         <h2>Modules related to this objective</h2>
         {% for entity in entity.modules %}
 
-            <div class="panel panel-default">
-                <div class="panel-heading">
+            <div class="card">
+                <div class="card-block">
                     <h3><a href="{{ path('module_show', { 'id': entity.id }) }}">{{ entity.name|raw }}</a></h3>
                     {% for tag in entity.tags %}
                         <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
@@ -36,7 +36,7 @@
                                 </span>
                     {% endfor %}
                 </div>
-                <div class="panel-body">
+                <div class="card-block">
 
                     {{ entity.description|raw }}
 
