--- a/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
+    <div class="col-sm-10">
+        <h1>Partners/Internships</h1>
+        {% if is_granted('ROLE_ADMIN') %}
+            <a class="btn btn-primary pull-right" href="{{ path('opportunity_new') }}">New Opportunity</a>
+        {% endif %}
 
-    <h1 style="display: inline-block;">Partners/Internships</h1>
-    {% if is_granted('ROLE_ADMIN') %}
-        <a class="btn btn-primary pull-right" href="{{ path('opportunity_new') }}">New Opportunity</a>
-    {% endif %}
-
-    {% for entity in entities %}
-        <div class="col-sm-12 well">
+        {% for entity in entities %}
+            <div class="col-sm-12">
                 <div class="col-sm-10">
                     <h2 style="display:inline">
                         {{ entity.title }}
@@ -18,14 +18,16 @@
                         {{ entity.teaser|raw }}
                     </p>
                     {% if entity.description != '' %}
-                    <p>
-                    <a class=""
-                       href="{{ path('opportunity_show', { 'id': entity.id }) }}">Read the full description.</a>
-                    </p>
+                        <p>
+                            <a class=""
+                               href="{{ path('opportunity_show', { 'id': entity.id }) }}">Read the full description.</a>
+                        </p>
                     {% endif %}
                 </div>
-            {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default"
-                                                href="{{ path('opportunity_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
-        </div>
-    {% endfor %}
-    {% endblock %}
+                {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-primary"
+                                                    href="{{ path('opportunity_edit', { 'id': entity.id }) }}">
+                        Edit</a>{% endif %}
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
