--- a/src/Sustain/AppBundle/Resources/views/Opportunity/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/show.html.twig
@@ -7,7 +7,7 @@
         <a class="btn btn-primary pull-right" href="{{ path('opportunity_new') }}">New Opportunity</a>
     {% endif %}
 
-        <div class="col-sm-12 well">
+        <div class="col-sm-12">
                 <div class="col-sm-10">
                     <h2 style="display:inline">
                         {{ entity.title }}
@@ -17,7 +17,7 @@
                         {{ entity.description|raw }}
                     </p>
                 </div>
-            {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default"
+            {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-primary"
                                                 href="{{ path('opportunity_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
         </div>
     {% endblock %}
