--- a/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
@@ -1,32 +1,35 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Stories</h1>
+    <div class="col-sm-10">
+        <h1>Stories</h1>
 
-    {% for entity in entities %}
+        {% for entity in entities %}
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="inline"><a href="{{ path('page_show', { 'id': entity.id }) }}">{{ entity.menuName|raw }}</a></h3>
+            <div class="card">
+                <div class="card-block">
+                    <h3 class="inline"><a
+                                href="{{ path('page_show', { 'id': entity.id }) }}">{{ entity.menuName|raw }}</a></h3>
 
-                {% if is_granted('ROLE_ADMIN') %}
-                    Section: {{ entity.section.name }}
-                    {% if entity.homepage == true %}/ On Homepage {% endif %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                        Section: {{ entity.section.name }}
+                        {% if entity.homepage == true %}/ On Homepage {% endif %}
 
-                <a class="btn btn-default" href="{{ path('page_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
-            </div>
-            <div class="panel-body">
-                <div class="col-sm-8">
-                    {{ entity.teaser|raw }}
-                    <a href="{{ path('page_show', { 'id': entity.id }) }}">Read more about {{ entity.menuName|raw }}</a>
+                    <a class="btn btn-primary" href="{{ path('page_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
                 </div>
-                <div class="col-sm-4">
-                    <img class="img-responsive pull-right" src="{{ entity.teaserImage }}"/>
+                <div class="card-block">
+                    <div class="col-sm-8">
+                        {{ entity.teaser|raw }}
+                        <a href="{{ path('page_show', { 'id': entity.id }) }}">Read more
+                            about {{ entity.menuName|raw }}</a>
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="img-responsive pull-right" src="{{ entity.teaserImage }}"/>
+                    </div>
+
                 </div>
-
             </div>
-        </div>
 
-    {% endfor %}
-
+        {% endfor %}
+    </div>
 {% endblock %}
