--- a/src/Sustain/AppBundle/Resources/views/Page/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
     <div class="col-sm-12 well" style="min-height:90vh;">
-        {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default pull-right" href="{{ path('page_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
+        {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-primary pull-right" href="{{ path('page_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
         {{ entity.pageBody|raw }}
     </div>
 
