--- a/src/Sustain/AppBundle/Resources/views/Sample/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Sample/index.html.twig
@@ -30,7 +30,7 @@
                 <td>{{ entity.task }}</td>
                 <td>{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                         {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
-                            <a class="btn btn-default" href="{{ path('sample_edit', { 'id': entity.id }) }}">Edit</a>
+                            <a class="btn btn-primary" href="{{ path('sample_edit', { 'id': entity.id }) }}">Edit</a>
                         {% endif %}
                     {% endif %}
                 </td>
