--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -3,53 +3,60 @@
 
 
 {% block body -%}
+    <div class="col-sm-10">
+
+        <h1>Stories</h1>
 
 
-    <h1 class="inline">Stories</h1>
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
-        {% for entity in entities %}
-            <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne">
-                    <div class="row">
-                        <div class="col-sm-10">
-                            {% if is_granted('ROLE_ADMIN') %}
-                            <a class="btn btn-default btn-sm pull-right" href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
-                            </a>
-                            {% endif %}
-                            <h3 class="inline"><a title="click to open this section" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
-                                    {{ entity.name|raw }}
-                                </a></h3>
-                            {{ entity.info|raw }}
-                        </div>
-                        <div class="col-sm-2">
-                            <img class="img-responsive pull-right" src="{{ entity.image }}"/>
-                        </div>
-                    </div>
-                </div>
-                <div id="collapse{{ loop.index }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ loop.index }}">
-                    <div class="panel-body">
-                        {% for page in entity.pages %}
-                            <div class="row">
-                                <div class="col-sm-10">
-                                    <h3 class="inline"><a href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName|raw }}</a></h3>
-                                    {{ page.teaser|raw }}
-                                </div>
-                                <div class="col-sm-2">
-                                    <img class="img-responsive pull-right" src="{{ page.teaserImage }}"/>
-                                </div>
+            {% for entity in entities %}
+                <div class="card">
+                    <div class="card-block" role="tab" id="headingOne">
+                        <div class="row">
+                            <div class="col-sm-10">
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <a class="btn btn-primary btn-sm pull-right"
+                                       href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
+                                    </a>
+                                {% endif %}
+                                <h3 class="inline"><a title="click to open this section" role="button"
+                                                      data-toggle="collapse" data-parent="#accordion"
+                                                      href="#collapse{{ loop.index }}" aria-expanded="true"
+                                                      aria-controls="collapse{{ loop.index }}">
+                                        {{ entity.name|raw }}
+                                    </a></h3>
+                                {{ entity.info|raw }}
                             </div>
-                        {% endfor %}
+                            <div class="col-sm-2">
+                                <img class="img-responsive pull-right" src="{{ entity.image }}"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="collapse{{ loop.index }}" class="panel-collapse collapse" role="tabpanel"
+                         aria-labelledby="heading{{ loop.index }}">
+                        <div class="card-block">
+                            {% for page in entity.pages %}
+                                <div class="row">
+                                    <div class="col-sm-10">
+                                        <h3 class="inline"><a
+                                                    href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName|raw }}</a>
+                                        </h3>
+                                        {{ page.teaser|raw }}
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <img class="img-responsive pull-right" src="{{ page.teaserImage }}"/>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
 
+
+        </div>
 
     </div>
-
-
 
 {% endblock %}
