--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -10,71 +10,81 @@
 
 
 {% block sidebar %}
-    {% if 'opportunity' in app.request.attributes.get('_route') or 'page' in app.request.attributes.get('_route') %}
-        <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
-            {% if 'page_show' in app.request.attributes.get('_route') %}
-                {% if entity.section %}{{ entity.section.name }}
-                {% for page in entity.section.pages %}
-                    <li><a href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName }}</a></li>
-                {% endfor %}
-                {% endif %}
-            {% endif %}
-            <li><a href="{{ path('opportunity', {'type': 'service'}) }}">Partners</a></li>
-            <li><a href="{{ path('opportunity', {'type': 'intern'} ) }}">Internships</a></li>
-        </ul>
-    {% endif %}
+    <div class="col-sm-2 sidebar">
 
-    {% if 'module' in app.request.attributes.get('_route') or 'objective' in app.request.attributes.get('_route') or 'activity' in app.request.attributes.get('_route')
-    or 'file' in app.request.attributes.get('_route') %}
-        <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
-            <li><a href="{{ path('module') }}">Modules</a></li>
-            <li><a href="{{ path('objective') }}">Objectives</a></li>
-            <li><a href="{{ path('activity') }}">Activities</a></li>
-            <li><a href="{{ path('file') }}">Files</a></li>
-        </ul>
-    {% endif %}
 
-    {% if categories is defined %}
-        <hr/>
-        <h2 style="font-size: medium">Labels</h2>
-        {% for category in categories %}
-            {{ category.name }}
-            {% for tag in category.tags %}
-                {% if 'file' in app.request.attributes.get('_route') %}
-                    <a href="{{ path('files_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
-                                ">{{ tag.name }}</span></a>
-                {% elseif 'module' in app.request.attributes.get('_route') %}
-                    <a href="{{ path('modules_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
-                                ">{{ tag.name }}</span></a>
-                {% elseif 'objective' in app.request.attributes.get('_route') %}
-                    <a href="{{ path('objectives_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right"
-                                                                                     style="background-color: {{ tag.color }};
-                                                                                             ">{{ tag.name }}</span></a>
-                {% elseif 'activity' in app.request.attributes.get('_route') %}
-                    <a href="{{ path('activity_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right"
-                                                                                   style="background-color: {{ tag.color }};
-                                                                                           ">{{ tag.name }}</span></a>
-                {% else %}
-                    <span class="label label-default margin-right" style="background-color: {{ tag.color }};">{{ tag.name }}</span>
+        {% if 'opportunity' in app.request.attributes.get('_route') or 'page' in app.request.attributes.get('_route') %}
+            <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
+                {% if 'page_show' in app.request.attributes.get('_route') %}
+                    {% if entity.section %}{{ entity.section.name }}
+                        {% for page in entity.section.pages %}
+                            <li><a href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName }}</a></li>
+                        {% endfor %}
+                    {% endif %}
                 {% endif %}
-            {% endfor %}
+                <li><a href="{{ path('opportunity', {'type': 'service'}) }}">Partners</a></li>
+                <li><a href="{{ path('opportunity', {'type': 'intern'} ) }}">Internships</a></li>
+            </ul>
+        {% endif %}
+
+        {% if 'module' in app.request.attributes.get('_route') or 'objective' in app.request.attributes.get('_route') or 'activity' in app.request.attributes.get('_route')
+        or 'file' in app.request.attributes.get('_route') %}
+            <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
+                <li><a href="{{ path('module') }}">Modules</a></li>
+                <li><a href="{{ path('objective') }}">Objectives</a></li>
+                <li><a href="{{ path('activity') }}">Activities</a></li>
+                <li><a href="{{ path('file') }}">Files</a></li>
+            </ul>
+        {% endif %}
+
+        {% if categories is defined %}
             <hr/>
-        {% endfor %}
-    {% endif %}
+            <h2 style="font-size: medium">Labels</h2>
+            {% for category in categories %}
+                {{ category.name }}
+                {% for tag in category.tags %}
+                    {% if 'file' in app.request.attributes.get('_route') %}
+                        <a href="{{ path('files_by_tag', {'tag': tag.id}) }}"><span
+                                    class="label label-default margin-right" style="background-color: {{ tag.color }};
+                                    ">{{ tag.name }}</span></a>
+                    {% elseif 'module' in app.request.attributes.get('_route') %}
+                        <a href="{{ path('modules_by_tag', {'tag': tag.id}) }}"><span
+                                    class="label label-default margin-right" style="background-color: {{ tag.color }};
+                                    ">{{ tag.name }}</span></a>
+                    {% elseif 'objective' in app.request.attributes.get('_route') %}
+                        <a href="{{ path('objectives_by_tag', {'tag': tag.id}) }}"><span
+                                    class="label label-default margin-right"
+                                    style="background-color: {{ tag.color }};
+                                            ">{{ tag.name }}</span></a>
+                    {% elseif 'activity' in app.request.attributes.get('_route') %}
+                        <a href="{{ path('activity_by_tag', {'tag': tag.id}) }}"><span
+                                    class="label label-default margin-right"
+                                    style="background-color: {{ tag.color }};
+                                            ">{{ tag.name }}</span></a>
+                    {% else %}
+                        <span class="label label-default margin-right"
+                              style="background-color: {{ tag.color }};">{{ tag.name }}</span>
+                    {% endif %}
+                {% endfor %}
+                <hr/>
+            {% endfor %}
+        {% endif %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <hr/>
-        <ul class="nav nav-sidebar list-unstyled">
-            <li>Labels</li>
-            <li><a href="{{ path('tag') }}"> List Labels</a></li>
-            <li><a href="{{ path('tag_new') }}">New Label</a></li>
-            <li><a href="{{ path('category') }}"> List Categories</a></li>
-            <li><a href="{{ path('category_new') }}">New Category</a></li>
-            <li>Pages</li>
-            <li><a href="{{ path('section') }}"> List Sections</a></li>
-            <li><a href="{{ path('section_new') }}">New Section</a></li>
-            <li><a href="{{ path('page') }}"> List Pages</a></li>
-            <li><a href="{{ path('page_new') }}">New Page</a></li>
-        </ul>
-    {% endif %}
+        {% if is_granted('ROLE_ADMIN') %}
+            <hr/>
+            <ul class="nav nav-sidebar list-unstyled">
+                <li>Labels</li>
+                <li><a href="{{ path('tag') }}"> List Labels</a></li>
+                <li><a href="{{ path('tag_new') }}">New Label</a></li>
+                <li><a href="{{ path('category') }}"> List Categories</a></li>
+                <li><a href="{{ path('category_new') }}">New Category</a></li>
+                <li>Pages</li>
+                <li><a href="{{ path('section') }}"> List Sections</a></li>
+                <li><a href="{{ path('section_new') }}">New Section</a></li>
+                <li><a href="{{ path('page') }}"> List Pages</a></li>
+                <li><a href="{{ path('page_new') }}">New Page</a></li>
+            </ul>
+        {% endif %}
+
+    </div>
 {% endblock %}
