--- a/src/Sustain/AuthenticateBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AuthenticateBundle/Resources/views/layout.html.twig
@@ -34,7 +34,7 @@
     </script>
 
     <div class="col-sm-offset-4 col-sm-4 col-xs-12 ">
-        <div class="panel panel-default" style="margin-top: 30px;">
+        <div class="card" style="margin-top: 30px;">
             <div class="panel-body">
                 <div style="text-align:center;">
                     <h1 class="margin-top-small">{{ application_name }}.</h1>
