--- a/src/Sustain/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/show.html.twig
@@ -5,7 +5,7 @@
     <div class="well col-sm-12">
 
         {% if is_granted('ROLE_ADMIN') or app.user.username==entity.username %}
-            <a class="btn btn-default pull-right" href="{{ path('user_edit', { 'id': entity.id }) }}">Edit</a>
+            <a class="btn btn-primary pull-right" href="{{ path('user_edit', { 'id': entity.id }) }}">Edit</a>
         {% endif %}
 
 
